# pre-commit-shrink-image

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pre_commit_shrink_image.py  pyproject.toml
